compiler/testData/diagnostics/tests/backingField/ReadNonexistentPropertyInAnonymous.kt
class Cl() {
    init {
        val <!UNUSED_VARIABLE!>x<!> = <!UNRESOLVED_REFERENCE!>$a<!>
    }
}
